[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "joinpdf"
version = "0.1.0"
authors = [{name = "Juan Lara", email = "julara@unal.edu.co"}]
description = "A simple cli that merge multiple PDF files."
requires-python = ">3.8"
dependencies = [
    "pymupdf", "tqdm"
]

[project.optional-dependencies]
dev = ["neovim"]

[tool.setuptools.packages.find]
where = ["src/"]

[project.scripts]
joinpdf = "joinpdf.cli:cli"
